           action that needs remote access
    * FIX: send automation data via POST not GET. This fixes inventory
           on hosts with more than 500 services.
    * FIX: make config options directly active after resetting them
           to their defaults (didn't work for start_url, etc.
    * FIX: Fixed editing of ListOf in valuespec editors (e.g. used in logwatch
    pattern editor)

    Multisite:
    * FIX: fixed filter of recent event views (4 hours didn't catch)
    * FIX: convert more buttons to new graphical style
    * FIX: Logwatch handles logs with only OK lines in it correctly in logfile list views
    * FIX: Fixed syntax error in "Single-Host Problems" view definition
    * New help button at top right of each page now toggles help texts
    * Snapin Custom Links allows to specify HTTP link target

    Mobile GUI:
    * FIX: commands can be executed again
    * FIX: fixed styling of buttons

    Checks & Agents:
    * FIX: Logwatch: fixed missing linebreak during reclassifing lines of logfiles
    * FIX: Logwatch: Logwatch services in rules configured using WATO must be
      given as item, not as whole service name
    * New active check via WATO: check_ldap

    BI:
    * FIX: make rotating folding arrows black (white was not visible)
    * Display format 'boxes' now in all BI views available
    * Display format 'boxes' now persists folding state

1.2.0b3:
    Core:
    * FIX: fixed SNMP info declaration in checks: could be garbled
      up in rare cases
    * avoid duplicate parents definition, when using 'parents' and
      extra_host_conf["parents"] at the same time. The later one has
      precedence.

    Multisite:
    * Logwatch: Colorizing OK state blocks correctly
    * FIX: allow web plugins to be byte compiled (*.pyc). Those
      are preferred over *.py if existing
    * View Editor: Fixed jump to top of the page after moving painters during
      editing views
    * FIX: Fixed login redirection problem after relogging